# pipsqueak-rtos

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  sdkconfig.defaults
components/esp32-ds3231/: CMakeLists.txt  ds3231.c
components/esp32-ds3231/include/: ds3231.h
components/psq4-aws-iot/: CMakeLists.txt  mqtt_client.c  psq4_aws_iot.c  psq4_mqtt.c
components/psq4-aws-iot/include/: psq4_aws_iot.h
components/psq4-gfx/: CMakeLists.txt  gfx.c  psq4_gfx.c  wifi_fail.c  wifi_ok.c
components/psq4-gfx/include/: gfx.h  psq4_gfx.h  sprites.h
components/psq4-spi-bus/: CMakeLists.txt  psq4_spi_bus.c  spi_bus.c
components/psq4-spi-bus/include/: psq4_spi_bus.h  spi_bus.h
components/psq4-system/: CMakeLists.txt  psq4_system.c  psq4_temperature.c  psq4_thermometers.c  psq4_time.c  psq4_wifi.c
components/psq4-system/include/: psq4_constants.h  psq4_system.h  psq4_thermometers.h  psq4_time.h  psq4_wifi.h
components/psq4-telemetry/: CMakeLists.txt  psq4_telemetry.c
components/psq4-telemetry/include/: psq4_telemetry.h
components/psq4-temperature/: CMakeLists.txt  psq4_temperature.c
components/psq4-timekeeper/: CMakeLists.txt  psq4_time.c  timekeeper.c
components/psq4-ui/: CMakeLists.txt  battery_dead_off.c  battery_dead_on.c  battery_ok.c  mqtt_connecting.c  mqtt_fail.c  mqtt_ok.c  psq4_ui.c  wifi_connecting_1.c  wifi_connecting_2.c  wifi_connecting_3.c  wifi_fail.c  wifi_ok.c
components/psq4-ui/include/: psq4_ui.h  psq4_ui_sprites.h
components/temperature-sensor/: CMakeLists.txt  temperatureSensor.c
main/: Kconfig.projbuild  main.c
(+4 files in other folders)
